codepkg/objects/F_42_Review_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Comment_By__c</fullName>
        <label>Comment By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mutual Aid Staff</fullName>
                </value>
                <value>
                    <fullName>Agency Primary User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F_42__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F-42</label>
        <referenceTo>F42__c</referenceTo>
        <relationshipLabel>F-42 Review Comments</relationshipLabel>
        <relationshipName>F_42_Review_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>F-42 Review Comment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>F-42 Review Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F-42 Review Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>